Before refactor