@@ -2,17 +2,17 @@ package com.oleksandr.monolith.util;
 
 import com.oleksandr.monolith.dto.BookingDTO;
 import com.oleksandr.monolith.entity.Booking;
-import com.oleksandr.monolith.entity.enums.BOOKING_STATUS;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Component
 public class BookingMapper {
 
     public BookingDTO mapToDto(Booking booking) {
-        if (booking == null) return null;
+        if (booking == null) throw new IllegalArgumentException("Booking entity cannot be null");
 
         return BookingDTO.builder()
                 .id(booking.getId())
@@ -23,26 +23,28 @@ public class BookingMapper {
     }
 
     public Booking mapToEntity(BookingDTO dto) {
-        if (dto == null) return null;
+        if (dto == null) throw new IllegalArgumentException("BookingDTO cannot be null");
 
         Booking booking = new Booking();
         booking.setId(dto.getId());
-        // ticket и user надо будет устанавливать отдельно в сервисе через репозитории
         booking.setStatus(dto.getStatus());
+        // ticket и user подгружаем через сервис
         return booking;
     }
 
     public List<BookingDTO> mapEntityListToDtoList(List<Booking> bookings) {
-        if (bookings == null || bookings.isEmpty()) return List.of();
-        return bookings.stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return bookings == null ? List.of() :
+                bookings.stream()
+                        .map(this::mapToDto)
+                        .filter(Objects::nonNull)
+                        .toList();
     }
 
     public List<Booking> mapDtoListToEntityList(List<BookingDTO> dtos) {
-        if (dtos == null || dtos.isEmpty()) return List.of();
-        return dtos.stream()
-                .map(this::mapToEntity)
-                .collect(Collectors.toList());
+        return dtos == null ? List.of() :
+                dtos.stream()
+                        .map(this::mapToEntity)
+                        .filter(Objects::nonNull)
+                        .toList();
     }
 }
